--- a/client/src/css/register.css
+++ b/client/src/css/register.css
@@ -19,4 +19,14 @@
         min-width: 0;
     }
 }
+/* .p-float-label {
+    position: relative; 
+}
+
+.pi {
+    position: absolute; 
+    right: 10px; 
+    top: 60%; 
+    transform: translateY(-50%); 
+} */
             
